call to action buttons responsiveness fixed on mobile

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -270,6 +270,18 @@ nav a.nav-link:hover::before {
   border: 2px solid #31aa52;
   cursor: pointer;
 }
+.hero-cta-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-left: 0;
+}
+.hero-cta-buttons .hero-btn {
+  text-align: center;
+  margin-top: 1.4rem;
+  margin-left: 0;
+}
 .hero-img {
   width: 100%;
   height: auto;
@@ -370,6 +382,13 @@ footer p:not(:last-child) {
 
 /* Portrait and Landscape */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero-cta-buttons {
+    flex-direction: row;
+  }
+  .hero-cta-buttons .hero-btn {
+    margin-top: 1.4rem;
+    margin-left: 1.45rem;
+  }
   .container {
     margin-left: auto;
     margin-right: auto;
@@ -493,6 +512,9 @@ footer p:not(:last-child) {
 
 /* Landscape */
 @media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .hero-cta-buttons {
+    flex-direction: row;
+  }
   /* @Abdussami and @stvyn navbar start */
   @import url("https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&display=swap");
 
@@ -528,6 +550,12 @@ footer p:not(:last-child) {
 
 /* LARGE SCREENS */
 @media screen and (min-width: 1025px) {
+  .hero-cta-buttons {
+    flex-direction: row;
+  }
+  .hero-cta-buttons .hero-btn:nth-child(2) {
+    margin-left: 1.45rem;
+  }
   .container {
     margin-left: auto;
     margin-right: auto;
